tests/snapshots/examples_fixtures/basics__comments_nested.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/comments_nested.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Type Mismatch

I found a type mismatch.

  examples/basics/comments_nested.flx:111:17
    |
111 |         "port": 8080,
    |                 ^^^^
    |                 ---- this expression has type `Int`

    |                 ---- this type mismatch is reported here

Note:
  expected type: String
  found type: Int
  the conflicting types meet at this expression

Help:
  Try `to_string(...)` to convert a `Int` into a `String`.
== stdout ==
<not executed>
